--- a/Prevu.Synoptics.V6120_Novatex/Pages/P330.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P330.xaml
@@ -43,14 +43,14 @@
         <Labels:Pipe Width="126" StatusComponent="318-01-MA1" PipeHeight="Medium" Canvas.Left="637" Canvas.Top="731" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="128" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="520" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="299-31-CV1" VisibilitySignal="LS2" />
         <Labels:Pipe Width="128" StatusComponent="277-01-MA1" PipeHeight="Medium" Canvas.Left="123" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="309-31-CV1" VisibilitySignal="LS2" />
-        <Labels:Pipe Width="52" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="900" Canvas.Top="396" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="330-WASHING">
+        <Labels:Pipe Width="52" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="900" Canvas.Top="396" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="FILL_MIX_1" VisibilityComponent="330-WASHING">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1116" Canvas.Top="396" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="330-WASHING">
+        <Labels:Pipe Width="54" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1115" Canvas.Top="395" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="FILL_MIX_2" VisibilityComponent="330-WASHING">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -158,14 +158,14 @@
         </Labels:Pipe>
         <Labels:Pipe Width="188" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1153" Canvas.Top="514" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
         <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="938" Canvas.Top="514" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
-        <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1066" Canvas.Top="201" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1083" Canvas.Top="201" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_STR_BatchReactor Height="239" Canvas.Left="1260" Canvas.Top="519" Width="122" Color="WetMaterial" ComponentName="340-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_STR_BatchReactor Height="240" Canvas.Left="1053" Canvas.Top="527" Width="122" Color="WetMaterial" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="20" Width="187" Canvas.Left="68" Canvas.Top="568" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="18" Width="240" Canvas.Left="68" Canvas.Top="411" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="452" Height="18" Canvas.Left="911" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:V01_STR_BatchReactor Height="239" Canvas.Left="837" Canvas.Top="541" Width="122" Color="WetMaterial" ComponentName="330-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="902" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="901" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -180,7 +180,7 @@
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="349" Canvas.Top="341" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="461" Canvas.Top="623" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="20" Width="187" Canvas.Left="238" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1118" Canvas.Top="420" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1117" Canvas.Top="420" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -199,7 +199,7 @@
         <Labels:DeviceLabel ComponentName="301-DISCHARGE" Canvas.Left="47" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="335-MIXER" Canvas.Left="1069" Canvas.Top="622" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="300-41-LT1" Canvas.Left="216" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="1080" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="1097" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="324-32-CV1" Canvas.Left="1024" Canvas.Top="421" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="311-VIEW" DetailsPageName="D311" Canvas.Left="562" Canvas.Top="255" RenderTransformOrigin="0.5,0.5" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="311-DISCHARGE" Canvas.Left="464" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center" />
