--- a/Prevu.Synoptics.V6120_Novatex/Pages/P950.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P950.xaml
@@ -10,25 +10,25 @@
              x:Class="Prevu.Synoptics.P950" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="257" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="208" Canvas.Top="159" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="948-31-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="77" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="83" Canvas.Top="159" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="199" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="948-31-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="72" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="241" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe Width="77" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="129" Canvas.Top="97" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="223" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="223" Canvas.Top="196" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="948-31-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="240" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="516" Canvas.Top="159" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="164" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="508" Canvas.Top="274" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="45" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="240" Canvas.Top="248" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe Width="170" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="586" Canvas.Top="159" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="164" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="508" Canvas.Top="287" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="531" Canvas.Top="196" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="365" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="230" Canvas.Top="210" VisibilityComponent="958-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="387" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="818" Canvas.Top="159" VisibilityComponent="968-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="809" Canvas.Top="274" VisibilityComponent="968-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -103,8 +103,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_DV_Diverter Canvas.Left="139" Canvas.Top="152" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DV_Diverter Canvas.Left="447" Canvas.Top="152" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_DV_Diverter Canvas.Left="749" Canvas.Top="152" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SLX_Silo Canvas.Left="208" Canvas.Top="350" Height="214" Width="183" HorizontalAlignment="Left" VerticalAlignment="Center" Color="DryMaterial" ComponentName="950-46-WT1" TrendName="WEIGHT"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="403" Canvas.Top="755" Height="50" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -130,8 +128,8 @@
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="184" Canvas.Left="1182" Canvas.Top="560" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_Radar Canvas.Left="1237" Canvas.Top="312" Height="50" Width="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="56" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="948-31-CV1" Canvas.Left="139" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="958-31-CV1" Canvas.Left="447" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="948-31-CV1" Canvas.Left="167" Canvas.Top="31" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="958-31-CV1" Canvas.Left="167" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="968-31-CV1" Canvas.Left="749" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="978-01-MA1" Canvas.Left="205" Canvas.Top="713" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="954-01-MA1" Canvas.Left="477" Canvas.Top="653" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -156,7 +154,33 @@
         <Labels:DeviceLabel ComponentName="970-SILO" Canvas.Left="865" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="980-SILO" Canvas.Left="1173" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="950-ANALYSIS" Canvas.Left="70" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="948-31-CV1" JumpToLabel="908-01-MA1" Canvas.Left="13" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="948-31-CV1" JumpToLabel="908-01-MA1" Canvas.Left="59" Canvas.Top="67" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="978-01-MA1" JumpToLabel="991-31-CV1" Canvas.Left="1439" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="175" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="137" Canvas.Top="172" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="73" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="139" Canvas.Top="210" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DV_Diverter Canvas.Left="165" Canvas.Top="204" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="117" Canvas.Top="191" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="285" Canvas.Top="153" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="345" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="250" Canvas.Top="97" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_Diverter Canvas.Left="165" Canvas.Top="90" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="555" Canvas.Top="128" VisibilityComponent="948-31-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
     </Canvas>
 </UserControl>
